[gd_scene load_steps=4 format=3 uid="uid://c0sk6j8h52ynk"]

[ext_resource type="PackedScene" uid="uid://dh6e8y0nlrbwq" path="res://tools/helpers/day_panel/day_panel.tscn" id="1_0ji71"]
[ext_resource type="Script" uid="uid://bvc4bv7ktd3tt" path="res://days/day_1/day_1.gd" id="1_w8q3n"]
[ext_resource type="Script" uid="uid://bwilsp232hsuj" path="res://tools/helpers/file_handler/file_handler.gd" id="2_w8q3n"]

[node name="Day1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w8q3n")

[node name="DayPanel" parent="." instance=ExtResource("1_0ji71")]
unique_name_in_owner = true
layout_mode = 1
day = 1

[node name="FileHandler" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_w8q3n")
metadata/_custom_type_script = "uid://bwilsp232hsuj"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Visualizer" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NumberRotation" type="TextEdit" parent="Visualizer"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 772.0
offset_top = 206.0
offset_right = 858.0
offset_bottom = 307.0
theme_override_font_sizes/font_size = 64
text = "99"

[node name="Label" type="Label" parent="Visualizer"]
layout_mode = 0
offset_left = 1053.0
offset_top = 88.0
offset_right = 1093.0
offset_bottom = 111.0
theme_override_font_sizes/font_size = 64
text = "Day 1 solution.:"

[node name="DayOneSolution" type="TextEdit" parent="Visualizer"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1053.0
offset_top = 200.0
offset_right = 1218.0
offset_bottom = 331.0
theme_override_font_sizes/font_size = 64
